feat: Add comprehensive retrieval agent system with enhanced document management
- Add RetrievalAgent with vector database capabilities for semantic search
- Implement retrieval_functions.cpp with document management operations
- Add new functions: add_document, search_documents, retrieve_and_answer, etc.
- Enhance agent.yaml with retrieval agent configuration and function definitions
- Add internet search and knowledge graph extraction capabilities
- Implement batch document processing and similarity clustering
- Add comprehensive retrieval agent tests (test_retrieval_agent.cpp)
- Improve workflow orchestrator with timeout handling and error recovery
- Fix test framework with better timeout management and process handling
- Update build system to include retrieval components
- Add API examples for document management in README

Major additions:
- 10+ new retrieval functions for document lifecycle management
- Enhanced workflow execution with robust timeout and error handling
- Comprehensive test suite for retrieval functionality
- Integration of retrieval manager with kolosal-server

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -158,7 +158,7 @@ set(WORKFLOW_SOURCES
 )
 
 set(TOOL_SOURCES
-    # Add tool sources here when available
+    src/functions/retrieval_functions.cpp
 )
 
 # Add retrieval manager if kolosal-server is built
