--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8081
   host: 0.0.0.0
   idle_timeout: 300
   allow_public_access: false
@@ -52,11 +52,22 @@ search:
   default_language: en
   default_category: general
 database:
-  vector_database: faiss
+  vector_database: qdrant
   retrieval_embedding_model: qwen3-embedding-0.6b
+  qdrant:
+    enabled: true
+    host: localhost
+    port: 6333
+    collection_name: documents
+    default_embedding_model: qwen3-embedding-0.6b
+    timeout: 30
+    api_key: ""
+    max_connections: 10
+    connection_timeout: 5
+    embedding_batch_size: 5
   faiss:
     index_type: Flat
-    index_path: .\data\faiss_index
+    index_path: D:\Works\Genta\codes\kolosal-agent\data\faiss_index
     dimensions: 1536
     normalize_vectors: true
     nlist: 100
@@ -66,7 +77,7 @@ database:
     metric_type: IP
 models:
   - id: gemma3-1b
-    path: https://huggingface.co/kolosal/gemma-3-1b/resolve/main/google_gemma-3-1b-it_q4_k_m.gguf
+    path: D:\Works\Genta\codes\kolosal-agent\build\Debug\models\google_gemma-3-1b-it_q4_k_m.gguf
     type: llm
     load_immediately: true
     main_gpu_id: 0
@@ -83,7 +94,7 @@ models:
       n_batch: 2048
       n_ubatch: 512
   - id: qwen3-embedding-0.6b
-    path: https://huggingface.co/kolosal/qwen3-embedding-0.6b/resolve/main/Qwen3-Embedding-0.6B-Q8_0.gguf
+    path: D:\Works\Genta\codes\kolosal-agent\https:\huggingface.co\kolosal\qwen3-embedding-0.6b\resolve\main\Qwen3-Embedding-0.6B-Q8_0.gguf
     type: embedding
     load_immediately: true
     main_gpu_id: 0
@@ -101,7 +112,7 @@ models:
       n_ubatch: 64
 inference_engines:
   - name: llama-cpu
-    library_path: ./build/Release/llama-cpu.dll
+    library_path: D:\Works\Genta\codes\kolosal-agent\build\Debug\llama-cpu.dll
     version: 1.0.0
     description: CPU-based inference engine for LLaMA models
     load_on_startup: true
